--- a/app/views/academy/answers/_form_aux.html.erb
+++ b/app/views/academy/answers/_form_aux.html.erb
@@ -31,7 +31,7 @@
     <%= link_to '<span class="icon-arrow-left" style="margin-right: 5px; color: white;"></span>Voltar'.html_safe, academy_questions_path, class: "btn btn-primary"%>
     <div class="actions" style="float:right">
       <div class="actions" style="float:right">
-        <%= f.submit "Publicar", :class => "btn btn-info" %>
+        <%= f.submit "Publicar", :class => "btn btn-primary", :id => "publish-button" %>
       </div>
     </div>
   </div>
