--- a/app/views/academy/questions/_question.html.erb
+++ b/app/views/academy/questions/_question.html.erb
@@ -1,11 +1,11 @@
 <ol class="breadcrumb" id="breadcrumbAds" style="border: 1px solid #dddddd;">
   <li class="active">
-    <i class="fa fa-book"></i> Academia</li> >
+    <i class="fa fa-book"></i> Academia >
     <a class="url" href="<%= academy_questions_path %>">Perguntas</a> >
     <a class="url" href="<%= academy_question_path(@academy_question.id) %>"><%= @academy_question.title %></a>
   </li>
   <% if user_signed_in? %>
-  <%= link_to '<i class="fa fa-plus"></i>Nova Pergunta'.html_safe, new_academy_question_path,:class=> "url", style:"float:right"%>
+    <%= link_to '<i class="fa fa-plus"></i>Nova Pergunta'.html_safe, new_academy_question_path,:class=> "url", style:"float:right"%>
   <% end %>
 </ol>
 
