--- a/app/views/academy/workshops/index.html.erb
+++ b/app/views/academy/workshops/index.html.erb
@@ -1,10 +1,11 @@
 <ol class="breadcrumb" id="breadcrumbAds" style="border: 1px solid #dddddd;">
   <li class="active">
-    <i class="fa fa-book"></i> Academia</li> >
-    <a class="url" href="<%= academy_workshops_path %>"> Workshops</a></li>
-    <% if user_signed_in? %>
-    <%= link_to '<i class="fa fa-plus"></i>Novo Workshop'.html_safe, new_academy_workshop_path,:class=> "url", style:"float:right"%>
-    <% end %>
+    <i class="fa fa-book"></i> Academia >
+    <a class="url" href="<%= academy_workshops_path %>"> Workshops</a>
+  </li>
+  <% if user_signed_in? %>
+    <%= link_to '<i class="fa fa-plus"></i>Novo Workshop'.html_safe, new_academy_workshop_path,:class=> "url", style:"float:right" %>
+  <% end %>
 </ol>
 
 <div class="row">
