--- a/app/views/academy/questions/_form.html.erb
+++ b/app/views/academy/questions/_form.html.erb
@@ -36,9 +36,9 @@
     <div class="panel-footer" id="buttons-question">
       <div class="fields">
         <% if action_name == "edit" %>
-        <%= link_to '<span class="icon-arrow-left" style="margin-right: 5px;"></span>Voltar'.html_safe, academy_question_path(params[:id]), class: "btn btn-primary" %>
+        <%= link_to '<span class="icon-arrow-left" style="margin-right: 5px; color: white;"></span>Voltar'.html_safe, academy_question_path(params[:id]), class: "btn btn-primary" %>
         <% else %>
-        <%= link_to '<span class="icon-arrow-left" style="margin-right: 5px;"></span>Voltar'.html_safe, academy_questions_path, class: "btn btn-primary" %>
+        <%= link_to '<span class="icon-arrow-left" style="margin-right: 5px; color: white;"></span>Voltar'.html_safe, academy_questions_path, class: "btn btn-primary" %>
         <% end %>
         <div class="actions" style="float:right">
           <div class="actions" style="float:right">
