--- a/app/views/academy/tutorials/edit.html.erb
+++ b/app/views/academy/tutorials/edit.html.erb
@@ -1,6 +1,6 @@
-<ol class="breadcrumb" id="breadcrumbAds">
+<ol class="breadcrumb" id="breadcrumbAds" style="border: 1px solid #dddddd;">
   <li class="active">
-    <i class="fa fa-tags"></i> Academia >
+    <i class="fa fa-book"></i> Academia >
     <a class="url" href="<%= academy_tutorials_path %>"> Tutoriais</a> >
     <a class="url" href="<%= academy_tutorial_path(@academy_tutorial.id) %>"> <%= @academy_tutorial.title %></a>
   </li>
