--- a/app/views/academy/tutorials/show.html.erb
+++ b/app/views/academy/tutorials/show.html.erb
@@ -67,7 +67,7 @@
     <div class="fields">
       <div class="button_back">
         <button type="button" class="btn btn-primary" onclick="location.href='<%= academy_tutorials_path %>'">
-          <span class="icon-arrow-left" style=""></span> Voltar
+          <span class="icon-arrow-left" style="margin-right: 5px; color: white;"></span> Voltar
         </button>
       </div>
     </div>
