--- a/app/views/academy/tutorials/_form.html.erb
+++ b/app/views/academy/tutorials/_form.html.erb
@@ -45,9 +45,9 @@
       <div class="panel-footer" id="buttons-tutorial">
         <div class="fields">
           <% if action_name == "edit" %>
-            <%= link_to '<span class="icon-arrow-left" style="margin-right: 5px;"></span>Voltar'.html_safe, academy_tutorial_path(params[:id]), class: "btn btn-primary" %>
+            <%= link_to '<span class="icon-arrow-left" style="margin-right: 5px; color:white;"></span>Voltar'.html_safe, academy_tutorial_path(params[:id]), class: "btn btn-primary" %>
           <% else %>
-            <%= link_to '<span class="icon-arrow-left" style="margin-right: 5px;"></span>Voltar'.html_safe, academy_tutorials_path, class: "btn btn-primary" %>
+            <%= link_to '<span class="icon-arrow-left" style="margin-right: 5px; color:white;"></span>Voltar'.html_safe, academy_tutorials_path, class: "btn btn-primary" %>
           <% end %>
 
           <div class="actions" style="float:right">
