--- a/app/views/academy/workshops/_form.html.erb
+++ b/app/views/academy/workshops/_form.html.erb
@@ -73,7 +73,7 @@
     </div>
   </div>
 
-  <div class="control-group" style="margin-bottom: 20px;">
+  <div class="control-group">
     <%= f.label :local, "Localização do Workshop" ,:class=>"control-label" %><label class="help-inline" style="margin-left:10px" generated="true" for="addresspicker_map"></label>
 
     <div class="controls">
