--- a/app/views/academy/workshops/show.html.erb
+++ b/app/views/academy/workshops/show.html.erb
@@ -18,8 +18,8 @@
   <header class="panel-heading border-header text-center" style="background-color:#f5f5f5; border-bottom: 1px solid #dddddd;">
     <% if user_signed_in? && current_user.id == @academy_workshop.user_id %>
       <div class="pull-right" style="padding-bottom: 2px;">
-        <%= link_to '<i class="fa  fa-edit"></i>Editar '.html_safe, edit_academy_workshop_path(@academy_workshop),:class=>"no-effect", :tile=> "Editar Workshop" %>
-        <%= link_to '<i class="fa fa fa-trash-o"></i>Eliminar '.html_safe, @academy_workshop, method: :delete, data: { confirm: 'Tem a certeza que quer apagar o seu workshop?' } ,:class=>"no-effect", :tile=> "Apagar Workshop"%>
+        <%= link_to '<i class="fa  fa-edit"></i>Editar '.html_safe, edit_academy_workshop_path(@academy_workshop),:class=>"no-effect", :title=> "Editar Workshop" %>
+        <%= link_to '<i class="fa fa fa-trash-o"></i>Eliminar '.html_safe, @academy_workshop, method: :delete, data: { confirm: 'Tem a certeza que quer apagar o seu workshop?' } ,:class=>"no-effect", :title=> "Eliminar Workshop" %>
       </div>
     <% end %>
     <br>
