--- a/app/views/academy/workshops/_form.html.erb
+++ b/app/views/academy/workshops/_form.html.erb
@@ -129,7 +129,7 @@
     autoclose: true,
     todayHighlight: true,
     calendarWeeks: true,
-    startDate: day + "/" + month + "/" + (year - 100)
+    startDate: day + "/" + month + "/" + year
   })
 </script>
 
