[Bug Fix] avoid past dates - tutorial dates

--- a/app/views/event/events/_form.html.erb
+++ b/app/views/event/events/_form.html.erb
@@ -98,7 +98,7 @@
         autoclose: true,
         todayHighlight: true,
         calendarWeeks: true,
-        startDate: day + "/" + month + "/" + (year - 100)
+        startDate: day + "/" + month + "/" + year
     })
 </script>
 
