[DESIGN FEATURE]CSS - Planos[Hélder Abreu]

--- a/app/assets/stylesheets/plans.css.scss
+++ b/app/assets/stylesheets/plans.css.scss
@@ -98,3 +98,13 @@
   font-weight: bold;
   text-align: center;
 }
+
+#buy-button input {
+  position: absolute;
+  left: 50%;
+  margin-left: -38px;
+}
+
+.panel-sucess > .panel-heading {
+  background-color: #F5F5DC !important;
+}
