--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -1,6 +1,6 @@
-<ol class="breadcrumb" id="breadcrumbAds">
+<ol class="breadcrumb" id="breadcrumbAds" style="border: 1px solid #dddddd;">
   <li class="active">
-    <a class="url" href="<%= plans_path %>"><i class="fa fa-tags"></i> Planos</a>
+    <i class="fa fa-bars"></i> <a class="url" href="<%= plans_path %>">Planos</a>
   </li>
 </ol>
 
@@ -16,6 +16,6 @@
 
 <div class="fields">
   <button type="button" class="btn btn-primary" onclick="location.href='<%= ads_path %>'">
-    <span class="icon-arrow-left" style="margin-right: 5px;"></span>Voltar
+    <span class="icon-arrow-left" style="margin-right: 5px; color: white;"></span>Voltar
   </button>
 </div>
