[BUG FIX] Fix limitation in events slots

--- a/app/views/ads/new.html.erb
+++ b/app/views/ads/new.html.erb
@@ -27,6 +27,6 @@
   </div>
 <% else %>
 
-  <p>Já não tem mais slots para anuncios, compre mais <%= link_to "aqui" %></p>
+  <p>Já não tem mais slots para anuncios, compre mais <%= link_to "aqui", plans_path%></p>
 
 <% end %>
