[Bug Fix] index workshops: tr href

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -138,8 +138,8 @@
 
 
       <% else %>
-        <li><%= link_to "Login".html_safe , new_user_session_path %></li>
-        <li><%= link_to "Registo", new_user_registration_path %></li>
+        <li><%= link_to "Login".html_safe , new_user_session_path, style:"color:white"%></li>
+        <li><%= link_to "Registo", new_user_registration_path, style:"color:white" %></li>
       <% end %>
       <!--END USER-->
 
