--- a/app/views/academy/workshops/index.html.erb
+++ b/app/views/academy/workshops/index.html.erb
@@ -32,10 +32,10 @@
                 <%= link_to (image_tag academy_workshop.user.avatar.url(:medium), :width => '50', :height => '50',:class => "img-circle pull-left"), academy_workshop.user %>
               </div>
             </td>
-            <td style="vertical-align:middle;" id="text-link"><%= link_to academy_workshop.title, academy_workshop %></td>
-            <td style="vertical-align:middle;"><%= academy_workshop.description %></td>
-            <td style="vertical-align:middle;"><%= academy_workshop.local %></td>
-            <td style="vertical-align:middle;"><%= academy_workshop.date.strftime('%d-%m-%Y %H:%M') %></td>
+            <td style="vertical-align:middle;" onmouseover="this.style.cursor='pointer'" onclick="document.location='<%= academy_workshop_path(academy_workshop.id) %>'"><%= academy_workshop.title %></td>
+            <td style="vertical-align:middle;" onmouseover="this.style.cursor='pointer'" onclick="document.location='<%= academy_workshop_path(academy_workshop.id) %>'"><%= academy_workshop.description %></td>
+            <td style="vertical-align:middle;" onmouseover="this.style.cursor='pointer'" onclick="document.location='<%= academy_workshop_path(academy_workshop.id) %>'"><%= academy_workshop.local %></td>
+            <td style="vertical-align:middle;" onmouseover="this.style.cursor='pointer'" onclick="document.location='<%= academy_workshop_path(academy_workshop.id) %>'"><%= academy_workshop.date.strftime('%d-%m-%Y %H:%M') %></td>
           </tr>
         <% end %>
 
