[Bug Fixed] Mister Lider

--- a/app/views/admin/academy/workshops/show.html.erb
+++ b/app/views/admin/academy/workshops/show.html.erb
@@ -1,4 +1,12 @@
 <p id="notice"><%= notice %></p>
 
+
+<%= @admin_academy_workshop.local %><br>
+<%= @admin_academy_workshop.description %><br>
+
+
+
+
+
 <%= link_to 'Edit', edit_admin_academy_workshop_path(@admin_academy_workshop) %> |
 <%= link_to 'Back', admin_academy_workshops_path %>
